<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/StatusFragment">

    <fragment
        android:id="@+id/StatusFragment"
        android:name="net.lmaotrigine.heartbeat.StatusFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_status">

        <action
            android:id="@+id/action_StatusFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
        <action
            android:id="@+id/action_StatusFragment_to_AboutFragment"
            app:destination="@id/AboutFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="net.lmaotrigine.heartbeat.SettingsFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_settings"/>
    <fragment
        android:id="@+id/AboutFragment"
        android:name="net.lmaotrigine.heartbeat.AboutFragment"
        android:label="@string/title_activity_about" />
</navigation>